--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.7.1",
+    "date-fns": "^2.29.3",
     "reflect-metadata": "^0.1.13",
     "res": "^0.4.0",
     "resource": "^0.8.1",
